--- a/index.html
+++ b/index.html
@@ -4,122 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-01</title>
+    <title>js</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="header">
-      <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
-      <nav>
-        <ul>
-          <li>
-            <a class="nav-link current" href="./index.html">Студия</a>
-          </li>
-          <li>
-            <a class="nav-link" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li><a class="nav-link" href="#">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
-    </header>
-    <main>
-      <section class="hero-section">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-button" type="button">Заказать услугу</button>
-      </section>
-      <section>
-        <h2 class="hiden">Преимущества</h2>
-        <ul>
-          <li>
-            <h3 class="Benefits-title">Внимание к деталям</h3>
-            <p class="Benefits-description">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="Benefits-title">Пунктуальность</h3>
-            <p class="Benefits-description">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="Benefits-title">Планирование</h3>
-            <p class="Benefits-description">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="Benefits-title">Современные технологии</h3>
-            <p class="Benefits-description">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul>
-          <li><img src="./images/1.jpg" alt="Первое" width="370" height="294" /></li>
-          <li><img src="./images/2.jpg" alt="Второе" width="370" height="294" /></li>
-          <li><img src="./images/3.jpg" alt="Третье" width="370" height="294" /></li>
-        </ul>
-      </section>
-      <section class="team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul>
-          <li class="team-item">
-            <img src="./images/Ihor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-            <h3 class="team-name">Игорь Демьяненко</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/olga.jpg" alt="Ольга Репина" width="270" height="260" />
-            <h3 class="team-name">Ольга Репина</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/nikolay.jpg" alt="Николай Тарасов" width="270" height="260" />
-            <h3 class="team-name">Николай Тарасов</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/Mihail.jpg" alt="Михаил Ермаков" width="270" height="260" />
-            <h3 class="team-name">Михаил Ермаков</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="footer">
-      <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
-      <address class="adress">
-        <ul>
-          <li>
-            <a
-              class="address-link"
-              href="https://goo.gl/maps/z2ZEgG6TqX1STKma6"
-              target="_blank"
-              rel="noopener
-            noreferrer"
-            >
-              г. Киев, пр-т Леси Украинки, 26
-            </a>
-          </li>
-          <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
-    </footer>
+  
   </body>
 </html>
